<?xml version="1.0"?>
<package format="2">
  <name>binnn</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>

  <maintainer email="thinh@todo.todo">Thinh</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>binnn_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_export_depend>binnn_description</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>teb_local_planner</build_export_depend>
  <exec_depend>binnn_description</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

</package>