<?xml version="1.0"?>
<package format="2">
  <name>binnn_description</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>

  <maintainer email="thinh@todo.todo">Thinh</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>urdf</exec_depend>

</package>